test/sema/typeck/var/wrong-type-params-primitive.dora
fn f() { let _a: Int32[Bool, Char] = 10; }
